--- a/frontend/src/Components/UsersTours/UsersTours.css
+++ b/frontend/src/Components/UsersTours/UsersTours.css
@@ -101,6 +101,13 @@
     border-radius: 5px;
 }
 
+.confirm-check {
+    width: 30px;
+    height: 30px;
+    margin-top: 10px;
+    margin-right: 18px;
+}
+
 .delivered {
     display:block;
     margin:auto;
