feat: divided header and coherence

--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -5,10 +5,14 @@
 
 header{
     background-color: #25313c;
-    position: sticky;
+    position: fixed;
     height: 10vh;
     width: 100%;
     display: flex;
+}
+
+.page {
+    padding-top: 10vh;
 }
 
 header p{
