--- a/frontend/src/Components/Articles/Articles.css
+++ b/frontend/src/Components/Articles/Articles.css
@@ -12,7 +12,7 @@
     justify-content: space-between;
 }
 
-.articles input {
+.articles input, .articles button{
     border: none;
     padding: 0 5px;
     height: 30px;
@@ -24,6 +24,9 @@
     width: 40vw;
     background-color: #BFBEBB;;
     color: #333333;
+}
+input::placeholder {
+    color: #575757 !important;
 }
 
 .articles-add-confirm {
