--- a/frontend/src/Components/Clients/Client.css
+++ b/frontend/src/Components/Clients/Client.css
@@ -1,35 +1,31 @@
-form {
-    max-width: 400px;
-    margin: 0 auto;
-  }
-  
-  div {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  input,
-  select {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-    margin-top: 5px;
-  }
-  
-  button {
-    background-color: #f5f1e4;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #f4db90;
-  }
-  
+.clients-add button, .clients-add input, .clients-add select {
+  margin-top: 1vh;
+  border: none;
+  border-radius: 5px;
+  width: 70vw;
+  height: 30px;
+}
+
+.clients-add input, .clients-add select  {
+  text-align: center;
+  background-color: #BFBEBB;;
+  color: #333333;
+}
+
+.clients-add {
+  margin-left: 15vw;
+  margin-right: 15vw;
+  justify-content: center;
+  padding-top: 10vh;
+}
+
+.client-tours-load {
+  width: 30px;
+  padding-top: 1vh;
+  margin: auto;
+}
+
+select option {
+  width: inherit;
+  border-radius: 5px;
+}
